1999-07-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* HttpDir.cc: support base href, refresh, take list of tags from wget;
	  show relative icon links in ls.
	* HttpDir.h: (class HttpDirList) add base_href member.
	* Http.cc: set home to / properly.

1999-07-05  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: cd and lcd without arguments go to home.
	* Resolver.cc: (LookupOne) fix to actually use argument.

1999-07-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: use new Resolver constructor; fix relookup
	  in case of net:relookup-always=true to lookup only after
	  trying last address.
	* Resolver.cc: finish SRV support; don't close stderr.
	* XferJob.cc: don't include netdb.h

1999-07-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolver.cc, Resolver.h: about to support SRV dns records.
	* Http.cc: use new Resolver constructor.

1999-07-04  Darren Stuart Embry <dsembr01@ox.slug.louisville.edu>

	* FileAccess.cc: (GetFileURL) prepend colon before port name.

1999-06-29  Artur Frysiak <wiget@t17.ds.pwr.wroc.pl>

	* Http.cc: send User-Agnet header.

1999-06-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: organize a list of tag/link pairs; add AREA/HREF pair.

1999-06-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.h, Http.h: (FA::UseCache) new method.
	* LsJob.cc, HttpDir.cc: use it in rels.
	* Http.cc: send Cache-Control too.

1999-06-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc, Http.h, resource.cc: implement http:cache (pragma:no-cache)

1999-06-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* complete.cc: workaround for readline bug (reported by
	  <sniffer@pamela.prograd.ufrgs.br>); make few functions static.
	* Makefile.am: add READLINE_DEPEND to lftp_DEPENDENCIES.

1999-06-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* XferJob.cc: translate time units in one place; add optional verbose
	  eta reporting (from Ben Winslow <rain@insane.loonybin.net>).
