@@ -77,8 +77,9 @@ public:
    void SendSig(int n,int sig);
    void KillAll();
 
+   void vfprintf(FILE *file,const char *fmt,va_list v);
    // CmdExec redefines this, and traps all messages of its children.
-   virtual void vfprintf(FILE *file,const char *fmt,va_list v);
+   virtual void top_vfprintf(FILE *file,const char *fmt,va_list v);
 
    // C-like functions calling vfprintf
    void eprintf(const char *fmt,...) PRINTF_LIKE(2,3);
@@ -89,6 +90,8 @@ public:
 
    Job();
    virtual ~Job();
+
+   virtual const char *GetConnectURL() { return 0; }
 };
 
 class SessionJob : public Job
@@ -103,6 +106,12 @@ protected:
 public:
    void PrintStatus(int v);
    FileAccess *session;
+   const char *GetConnectURL()
+      {
+	 if(!session)
+	    return 0;
+	 return session->GetConnectURL();
+      }
 };
 
 #endif /* JOB_H */
